@@ -1,3 +1,9 @@
+2021-03-05 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  src/z80/ralloc2.cc:
+	  Improved handling of hl in binary bitwise operators.
+
 2021-03-04 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
